# LinkingWithCMake

./: .breakpoints  CMakeLists.txt  Dec.hpp  Def.cpp  README.md  build.bat  main.cpp  run.bat  run.sh
include/: Student.hpp
src/: Student.cpp  main.cpp
